--- a/TodoApp_Api/appsettings.json
+++ b/TodoApp_Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection" : "Host=localhost;Database=todoapp;Username=postgres;Password=Senha123"
+  }
 }
